--- a/account/templates/account/menubar.html
+++ b/account/templates/account/menubar.html
@@ -11,6 +11,7 @@
         <a class="nav-item nav-link active" href="{% url 'account:dashboard' %}">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link " href="{% url 'blog:post_list' %}">Blog</a>
         <a class="nav-item nav-link " href="{% url 'account:register' %}">Registration</a>
+        <a class="nav-item nav-link " href="{% url 'reference:reference_list' %}">References</a>
       </div>
     </div>
   </nav> 
